style: added simple designs for login and logout

--- a/src/view/assets/style.css
+++ b/src/view/assets/style.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: basis33;
+  src: url('./fonts/basis33.ttf');
+}
+
+* {
+  font-family: basis33;
+}
+
